// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Flexbox Column sized flexboxes 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 yTyLg"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dETdtx"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 1
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eMdjRx"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 2
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dETdtx"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Default 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 yTyLg"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 1
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 2
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With breakpoint props 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hLMSUN"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      First element here
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Second element here
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dapibus neque in venenatis faucibus. Fusce vitae maximus diam. Ut placerat lacus id porttitor tristique. Mauris in neque tempus, venenatis metus vitae, pellentesque massa. Etiam blandit lacus diam, dignissim posuere massa semper maximus. In pretium commodo nisl sed ultrices. Duis gravida diam ac nisl sodales mollis. Quisque iaculis semper mi, eu interdum elit molestie quis. Vivamus rutrum cursus interdum. Suspendisse vehicula quam mi, a efficitur ante egestas eget.
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With conditionally hidden flex item 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 yTyLg"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 bkvXvK"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With conditionally visible flex item 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 yTyLg"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 bzujMt"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 1
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 bkvXvK"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With container and item props 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hEIiGr"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hkdNcr"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <div
        className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
      >
        First element here
      </div>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <div
        className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
      >
        Second element here
      </div>
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dapibus neque in venenatis faucibus. Fusce vitae maximus diam. Ut placerat lacus id porttitor tristique. Mauris in neque tempus, venenatis metus vitae, pellentesque massa. Etiam blandit lacus diam, dignissim posuere massa semper maximus. In pretium commodo nisl sed ultrices. Duis gravida diam ac nisl sodales mollis. Quisque iaculis semper mi, eu interdum elit molestie quis. Vivamus rutrum cursus interdum. Suspendisse vehicula quam mi, a efficitur ante egestas eget.
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With custom gutter 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hEIiGr"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eMdjRx"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 1
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eMdjRx"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With direction: column 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 iopGic"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 bzujMt"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 1
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 bkvXvK"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 2
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fevmho"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With height modified 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hyGNMq"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 1
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 2
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 imjWUH"
    >
      Col 3
    </div>
  </div>
</div>
`;
